--- a/tests/meshes/CMakeLists.txt
+++ b/tests/meshes/CMakeLists.txt
@@ -1,4 +1,4 @@
-configure_file(naca0012_hopw_ref2.msh naca0012.msh COPYONLY)
+configure_file(2d_cylinder.msh 2d_cylinder.msh COPYONLY)
 configure_file(naca0012_hopw_ref0.msh naca0012_hopw_ref0.msh COPYONLY)
 configure_file(naca0012_hopw_ref1.msh naca0012_hopw_ref1.msh COPYONLY)
 configure_file(naca0012_hopw_ref2.msh naca0012_hopw_ref2.msh COPYONLY)
@@ -79,6 +79,16 @@ and place them in
 endif()
 
 set (filename "SD7003_12_cell_spanwise.msh")
+if(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${filename})
+    message(SEND_ERROR
+"Missing 3D GMSH file named ${filename}. Please download them from
+    https://drive.google.com/drive/folders/1xaQRTCd8VXDeaV1alQ5oHI_YMm2X0X5R?usp=sharing
+and place them in
+      ${CMAKE_CURRENT_SOURCE_DIR}, or simply run get_gmsh_mesh_files_local.sh"
+      )
+endif()
+
+set (filename "2d_cylinder.msh")
 if(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${filename})
     message(SEND_ERROR
 "Missing 3D GMSH file named ${filename}. Please download them from
