--- a/tests/integration_tests_control_files/reduced_order/CMakeLists.txt
+++ b/tests/integration_tests_control_files/reduced_order/CMakeLists.txt
@@ -109,3 +109,13 @@ add_test(
         COMMAND mpirun -np 1 ${EXECUTABLE_OUTPUT_PATH}/PHiLiP_1D -i ${CMAKE_CURRENT_BINARY_DIR}/1d_burgers_rewienski_manufactured.prm
         WORKING_DIRECTORY ${TEST_OUTPUT_DIR}
 )
+
+# =======================================
+# 1D Euler Shock Entropy Stable solution
+# =======================================
+configure_file(1d_shock_entropy_stable.prm 1d_shock_entropy_stable.prm COPYONLY)
+add_test(
+        NAME 1D_EULER_SHOCK_ENTROPY_STABLE
+        COMMAND mpirun -np ${EXECUTABLE_OUTPUT_PATH}/PHiLiP_1D -i ${CMAKE_CURRENT_BINARY_DIR}/1d_shock_entropy_stable.prm
+        WORKING_DIRECTORY ${TEST_OUTPUT_DIR}
+)
