--- a/src/testing/CMakeLists.txt
+++ b/src/testing/CMakeLists.txt
@@ -37,6 +37,7 @@ set(TESTS_SOURCE
     bound_preserving_limiter_tests.cpp
     naca0012_unsteady_check_quick.cpp
     vortex_shedding.cpp
+    pod_unsteady.cpp
     )
 
 foreach(dim RANGE 1 3)
