Entropy Stable Snapshot Created

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,18 @@ tests/integration_tests_control_files/decaying_homogeneous_isotropic_turbulence/
 tests/unit_tests/grid/gmsh_reader/*.msh
 tests/meshes/*.msh
 Output/**
+gmsh_meshes/joukowski/convert_to_msh4.geo
+gmsh_meshes/joukowski/curve.py
+gmsh_meshes/joukowski/ebg.py
+gmsh_meshes/joukowski/fec.py
+gmsh_meshes/joukowski/geo.py
+gmsh_meshes/joukowski/gmsh.py
+gmsh_meshes/joukowski/grm.py
+gmsh_meshes/joukowski/Joukowski_Challenge.py
+gmsh_meshes/joukowski/Joukowski.py
+gmsh_meshes/joukowski/Laminar.py
+gmsh_meshes/joukowski/pg2d.py
+gmsh_meshes/joukowski/plot3d.py
+gmsh_meshes/joukowski/vtk.py
+doc/doxygen.cfg
+.vscode/launch.json
