--- a/src/reduced_order/CMakeLists.txt
+++ b/src/reduced_order/CMakeLists.txt
@@ -15,7 +15,8 @@ set(SOURCE
     assemble_ECSW_training_data_base.cpp
     hrom_test_location.cpp
     hyper_reduced_sampling_error_updated.cpp
-    assemble_greedy_residual.cpp)
+    assemble_greedy_residual.cpp
+    assemble_greedy_cubature.cpp)
 
 foreach(dim RANGE 1 3)
     # Output library
