--- a/src/ode_solver/CMakeLists.txt
+++ b/src/ode_solver/CMakeLists.txt
@@ -20,7 +20,8 @@ set(ODE_SOURCE
     reduced_order_ode_solver.cpp
     JFNK_solver/jacobian_vector_product.cpp
     JFNK_solver/JFNK_solver.cpp
-    hyper_reduced_petrov_galerkin_ode_solver.cpp)
+    hyper_reduced_petrov_galerkin_ode_solver.cpp
+    hyper_reduced_pod_galerkin_runge_kutta_ode_solver.cpp)
 
 foreach(dim RANGE 1 3)
     # Output library
