Created new test for HyperDG

--- a/src/testing/CMakeLists.txt
+++ b/src/testing/CMakeLists.txt
@@ -49,6 +49,7 @@ set(TESTS_SOURCE
     vortex_shedding.cpp
     pod_unsteady.cpp
     unsteady_hyper_reduction.cpp
+    hyper_reduction_dg.cpp
 )
 
 foreach(dim RANGE 1 3)
